# CV-final-project

./: .env.example  pyproject.toml
app/: __init__.py  llm.py  main.py  ocr.py
app/templates/: index.html
app/utils/: images.py
